<resources>
    <string name="app_name">Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello blank fragment</string>
    <string name="to_category">Ke Fragment Kategori</string>
    <string name="category_lifestyle">Ke Fragment Life Style</string>
    <string name="this_category">Ini Fragment Kategori</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Category_Name">Category Name</string>
    <string name="Description_Category">Description Category</string>
    <string name="to_profile">Ke Fragment Profile</string>
    <string name="tampilkan_dialog">Tampilkan Dialog</string>
    <string name="question_manager">Siapa Manager Terbaik</string>
    <string name="pap_guardiola">Pap Guardiola</string>
    <string name="jungen_klopp">Jungen Klopp</string>
    <string name="jthomas_tunchel">Thomas Tunchel</string>
    <string name="ole_gunnar_solkjaer">Ole Gunnar Solkjaer</string>
    <string name="arteta">Arteta</string>
    <string name="keluar">Keluar</string>
    <string name="pilih">pilih</string>

</resources>