<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".OptionalDialogFragment"
    android:orientation="vertical"
    android:padding = "16dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/question_manager" />
    <RadioGroup
        android:id = "@+id/rg_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <RadioButton
            android:id = "@+id/rg_pg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text = "@string/pap_guardiola" />
        <RadioButton
            android:id = "@+id/rg_jg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text = "@string/jungen_klopp" />
        <RadioButton
            android:id = "@+id/rg_tc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text = "@string/jthomas_tunchel" />
        <RadioButton
            android:id = "@+id/rg_ogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text = "@string/ole_gunnar_solkjaer" />
        <RadioButton
            android:id = "@+id/arteta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text = "@string/arteta" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <Button
            android:id  = "@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd = "4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="0.5"
            android:text = "@string/keluar"
            />
        <Button
            android:id  = "@+id/btn_chose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd = "4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="0.5"
            android:text = "@string/pilih"
            />
    </LinearLayout>




</LinearLayout>